<?xml version="1.0"?>
<package>
  <name>media_kodi_ip_driver</name>
  <version>0.1.56</version>
  <description>This package is for interfacing XBMC (by Rest API) to ROS. This package is part of Alfred Assistant stack.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickaël Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickaël Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>common_driver</build_depend>
  <build_depend>media_model</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>rosjava_build_tools</build_depend>


  <run_depend>common_driver</run_depend>
  <run_depend>media_model</run_depend>
  <run_depend>sound_play</run_depend>

</package>
