<?xml version="1.0"?>
<package>
  <name>smarthome_media_kodi_driver</name>
  <version>0.1.57</version>
  <description>This package is for interfacing Kodi (by Rest API) to ROS. This package is part of Alfred Assistant stack.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickael Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>smarthome_common_driver</build_depend>
  <build_depend>smarthome_media_model</build_depend>

  <run_depend>smarthome_common_driver</run_depend>
  <run_depend>smarthome_media_model</run_depend>

</package>
